Trying out use of VirtualThread, since we're specifying a recent enough JVM anyway.